tweaked some overlap issues

--- a/scss/resonate.scss
+++ b/scss/resonate.scss
@@ -1,7 +1,7 @@
 #resonate {
     .header, .body {
         padding: 0 1rem;
-        @media #{$medium-only} {
+        @media #{$medium-up} {
             padding: 0 3rem;
         }
     }
@@ -17,15 +17,14 @@
             $height: 50rem;
             height: $height;
             // right: 4rem;
-            margin-left: 25rem;
             margin-top: -(881/1914) * $height + 2rem;
         }
         @media #{$medium-only} {
-            right: 2rem;
             $height: 20rem;
             height: $height;
             margin-top: -(881/1914) * $height + 2rem;
         }
+        margin-left: 25rem;
         position: absolute;
         z-index: 200;
     }
